recent_topics: Let text in wrap to enforce fix width behaviour.
If we don't allow text to wrap, it overrides the fix width of
the columns.

--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -247,11 +247,6 @@
             }
         }
 
-        .recent_topic_stream,
-        thead .last_msg_time_header {
-            white-space: nowrap;
-        }
-
         /* These fixed column widths prevent column widths from being adjusted
            as new messages arrive from the server. */
         .recent_topic_stream {
